# dex-copy-trading

./: .gitignore  pyproject.toml
src/: main.py  tools.py
src/client/: api.py  debank.py  lifi.py  zerion.py
src/client/explorer/: polygon.py
src/conf/: config.py  sample_env
src/model/: defi.py
src/resources/: chains_map.json  sample_addresses_list.json  sample_last_transactions.json
src/strategy/: simple.py
