[tool.poetry]
name = "dex-copy-trading"
version = "0.1.0"
description = ""
authors = ["minhdoan"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
discordwebhook = "^1.0.3"
web3 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
